--- a/www/index.html
+++ b/www/index.html
@@ -342,18 +342,7 @@ grunt
                 <a href="https://jeffhuang.com/Final_WebGazer_IJCAI16.pdf"><img src="pdf.png"></a>
             </div>
             <div class="col-lg-11">
-            <p>If you use WebGazer.js please cite the following paper:</p>
-            <p>
-            <code>
-                @inproceedings{papoutsaki2016webgazer,<br>
-                author     = {Alexandra Papoutsaki and Patsorn Sangkloy and James Laskey and Nediyana Daskalova and Jeff Huang and James Hays},<br>
-                title      = {WebGazer: Scalable Webcam Eye Tracking Using User Interactions},<br>
-                booktitle  = {Proceedings of the 25th International Joint Conference on Artificial Intelligence (IJCAI)},<br>
-                pages      = {3839--3845},<br>
-                year       = {2016},<br>
-                organization={AAAI}<br>
-                }
-            </code>
+            <p> Papoutsaki, A., Laskey, J., & Huang, J. (2017, March). Searchgazer: Webcam eye tracking for remote studies of web search. In Proceedings of the 2017 Conference on Conference Human Information Interaction and Retrieval (pp. 17-26). ACM.
             </p>
             </div>
             </div>
@@ -362,7 +351,6 @@ grunt
                 <a href="https://jeffhuang.com/Final_SearchGazer_CHIIR17.pdf"><img src="pdf.png"></a>
             </div>
             <div class="col-lg-11">
-            <p>If you use <a href="./search">SearchGazer.js</a> please cite the following paper:</p>
             <p>
             <code>@inproceedings{papoutsaki2017searchgazer,<br>
                 author = {Alexandra Papoutsaki and James Laskey and Jeff Huang},<br>
