--- a/www/index.html
+++ b/www/index.html
@@ -342,7 +342,11 @@ grunt
                 <a href="https://jeffhuang.com/Final_WebGazer_IJCAI16.pdf"><img src="pdf.png"></a>
             </div>
             <div class="col-lg-11">
-            <p> Papoutsaki, A., Laskey, J., & Huang, J. (2017, March). Searchgazer: Webcam eye tracking for remote studies of web search. In Proceedings of the 2017 Conference on Conference Human Information Interaction and Retrieval (pp. 17-26). ACM.
+            <p> 
+                <p> If you use WebGazer.js please cite the following paper: </p>
+                <a href="https://jeffhuang.com/Final_WebGazer_IJCAI16.pdf">
+                Webgazer: Scalable webcam eye tracking using user interactions </a>
+                <br> Papoutsaki, A., Sangkloy, P., Laskey, J., Daskalova, N., Huang, J., & Hays, J. (2016, January). In Proceedings of the Twenty-Fifth International Joint Conference on Artificial Intelligence-IJCAI 2016.
             </p>
             </div>
             </div>
@@ -352,14 +356,10 @@ grunt
             </div>
             <div class="col-lg-11">
             <p>
-            <code>@inproceedings{papoutsaki2017searchgazer,<br>
-                author = {Alexandra Papoutsaki and James Laskey and Jeff Huang},<br>
-                title = {SearchGazer: Webcam Eye Tracking for Remote Studies of Web Search},<br>
-                booktitle = {Proceedings of the ACM SIGIR Conference on Human Information Interaction \& Retrieval (CHIIR)},<br>
-                year = {2017},<br>
-                organization={ACM}<br>
-                }
-            </code>
+                <p>If you use <a href="./search">SearchGazer.js</a> please cite the following paper:</p>
+                <a href="https://jeffhuang.com/Final_SearchGazer_CHIIR17.pdf">
+                Searchgazer: Webcam eye tracking for remote studies of web search </a>
+                <br> Papoutsaki, A., Laskey, J., & Huang, J. (2017, March). In Proceedings of the 2017 Conference on Conference Human Information Interaction and Retrieval (pp. 17-26). ACM. 
             </p>
             </div>
             </div>
@@ -369,16 +369,11 @@ grunt
             </div>
             <div class="col-lg-11">
             <p>For the <a href="./data">WebGazer webcam dataset</a> and findings about gaze behavior during typing:</p>
+                <a href="https://jeffhuang.com/Final_EyeTyper_ETRA18.pdf">
+                The eye of the typer: a benchmark and analysis of gaze behavior during typing</a>
+                <br> Papoutsaki, A., Laskey, J., & Huang, J. (2017, March). In Proceedings of the 2017 Conference on Conference Human Information Interaction and Retrieval (pp. 17-26). ACM. 
             <p>
-            <code>@inproceedings{papoutsaki2018eye,<br>
-                title={The eye of the typer: a benchmark and analysis of gaze behavior during typing},<br>
-                author={Papoutsaki, Alexandra and Gokaslan, Aaron and Tompkin, James and He, Yuze and Huang, Jeff},<br>
-                booktitle={Proceedings of the 2018 ACM Symposium on Eye Tracking Research \& Applications},<br>
-                pages={16},<br>
-                year={2018},<br>
-                organization={ACM}<br>
-                }
-            </code>
+                
             </p>
             </div>
             </div>
